/*
http://www.apache.org/licenses/LICENSE-2.0.txt


Copyright 2016 Intel Corporation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package rpc;
import "github.com/intelsdi-x/snap/internal/common/common.proto";


service MetricManager {
	rpc Load(PluginRequest) returns (PluginReply) {}
	rpc MetricCatalog(common.Empty) returns (MetricCatalogReply) {}
	rpc FetchMetrics(FetchMetricsRequest) returns (MetricCatalogReply) {}
	rpc GetMetricVersions(GetMetricVersionsRequest) returns (MetricCatalogReply) {}
	rpc GetMetric(FetchMetricsRequest) returns (MetricReply) {}
	rpc Unload(UnloadPluginRequest) returns (PluginReply) {}
	rpc PluginCatalog(common.Empty) returns (PluginCatalogReply) {}
	rpc AvailablePlugins(common.Empty) returns (AvailablePluginsReply) {}
	rpc GetPlugin(GetPluginRequest) returns (GetPluginReply) {}
	// managesMetrics from scheduler
	rpc GetPluginContentTypes(GetPluginContentTypesRequest) returns (GetPluginContentTypesReply) {}
	rpc ExpandWildcards(ExpandWildcardsRequest) returns (ExpandWildcardsReply) {}
	rpc CollectMetrics(CollectMetricsRequest) returns (CollectMetricsReply) {}
	rpc PublishMetrics(PubProcMetricsRequest) returns (ErrorReply) {}
	rpc ProcessMetrics(PubProcMetricsRequest) returns (ProcessMetricsReply) {}
	rpc ValidateDeps(ValidateDepsRequest) returns (ValidateDepsReply) {}
	rpc SubscribeDeps(SubscribeDepsRequest) returns (SubscribeDepsReply) {}
	rpc UnsubscribeDeps(SubscribeDepsRequest) returns (SubscribeDepsReply) {}
	rpc MatchQueryToNamespaces(ExpandWildcardsRequest) returns (ExpandWildcardsReply) {}
}

message AvailablePluginReply {
	string Name = 1;
	int64 Version = 2;
	string TypeName = 3;
	bool IsSigned = 4;
	int64 HitCount = 5;
	uint32 ID = 6;
	common.Time LastHitTimestamp = 7;
}

message AvailablePluginsReply {
	repeated AvailablePluginReply Plugins = 1;
}

message PluginReply {
	string Name = 1;
	int64 Version = 2;
	string TypeName = 3;
	bool IsSigned = 4;
	string Status = 5;
	common.Time LoadedTimestamp = 6;
	bytes ConfigPolicy = 7;
}

message PluginCatalogReply {
	repeated PluginReply Plugins = 1;
}

message MetricReply {
	repeated string Namespace = 1;
	int64 Version = 2;
	common.Time LastAdvertisedTime = 3;
	bytes ConfigPolicy = 4;
}

message MetricCatalogReply {
	repeated MetricReply Metrics = 1;
}

message GetPluginRequest {
	string Name = 1;
	int32 Version = 2;
	string Type = 3;
	bool Download = 4;
}

message GetPluginReply {
	PluginReply Plugin = 1;
	bytes PluginBytes = 2;
}

message PluginRequest {
	string Name = 1;
	bytes CheckSum = 2;
	bytes Signature = 3;
	bytes PluginFile = 4;
}

message FetchMetricsRequest {
	repeated string Namespace = 1;
	int32 Version = 2;
}

message GetMetricVersionsRequest {
	repeated string Namespace = 1;
}

message UnloadPluginRequest{
	string Name = 1;
	int32 Version = 2;
	string PluginType = 3;
}

service ConfigManager{
	rpc GetPluginConfigDataNode(ConfigDataNodeRequest) returns (common.ConfigMap) {}
	rpc GetPluginConfigDataNodeAll(common.Empty) returns (common.ConfigMap) {}
	rpc MergePluginConfigDataNode(MergeConfigDataNodeRequest) returns (common.ConfigMap) {}
	rpc MergePluginConfigDataNodeAll(common.ConfigMap) returns (common.ConfigMap) {}
	rpc DeletePluginConfigDataNodeField(DeleteConfigDataNodeFieldRequest) returns (common.ConfigMap) {}
	rpc DeletePluginConfigDataNodeFieldAll(DeleteConfigDataNodeFieldAllRequest) returns (common.ConfigMap) {}
}

message ConfigDataNodeRequest{
	int32 PluginType = 1;
	string Name = 2;
	int64 Version = 3;
}

message MergeConfigDataNodeRequest{
	common.ConfigMap Config = 1;
	ConfigDataNodeRequest Request = 2;
}

message DeleteConfigDataNodeFieldRequest{
	ConfigDataNodeRequest Request = 1;
	repeated string Fields = 2;
}

message DeleteConfigDataNodeFieldAllRequest{
	repeated string Fields = 1;
}

// managesMetrics from scheduler

message SerrorReply{}

message PubProcMetricsRequest{
	string ContentType = 1;
	bytes Content = 2;
	string PluginName = 3;
	int64 PluginVersion = 4;
	common.ConfigMap Config = 5;
	string TaskId = 6;
}

message ErrorReply{
	repeated string Errors = 1;
}

message ProcessMetricsReply {
	string ContentType = 1;
	bytes Content = 2;
	repeated string Errors = 3;
}

message GetPluginContentTypesRequest {
	string Name = 1;
	int32 PluginType = 2;
	int32 Version = 3;
}

message GetPluginContentTypesReply {
	repeated string AcceptedTypes = 1;
	repeated string ReturnedTypes = 2;
	string Error = 3;
}

message ValidateDepsRequest {
	repeated common.Metric Metrics = 1;
	repeated common.SubscribedPlugin Plugins = 2;
}

message ValidateDepsReply {
	repeated common.SnapError Errors = 1;
}

message SubscribeDepsRequest {
	repeated common.Metric Metrics = 1;
	repeated common.Plugin Plugins = 2;
	string TaskId = 3;
}

message SubscribeDepsReply {
	repeated common.SnapError Errors = 1;
}

message CollectMetricsRequest {
	string TaskID = 1;
	repeated common.Metric Metrics = 2;
	common.Time Deadline = 3;
}

message CollectMetricsReply {
	repeated common.Metric Metrics = 1;
	repeated string Errors = 2;
}

message ExpandWildcardsRequest {
	repeated string Namespace = 1;
}

message ArrString {
	repeated string S = 1;
}

message ExpandWildcardsReply {
	repeated ArrString NSS = 1;
	common.SnapError Error = 2;
}


	 
